103 fix jump to content offset (#648)
* Changed header + subnav to be fixed, added spacer


* Add top margin to error page to prevent 'Oops' from being hidden under the header

--- a/ui/src/Application/PeopleMover.scss
+++ b/ui/src/Application/PeopleMover.scss
@@ -175,3 +175,8 @@ button.addPersonButton {
     border: 2px solid white;
   }
 }
+
+.headerSpacer {
+  height: 108px;
+  width: 100%;
+}
